# AI-is-all-you-need

./: .gitignore  Readme  pyproject.toml  roadmap.md
LLM/: 01_llm_basic_concepts.ipynb
LLM_AIGC/: 01_openai_api.ipynb  02_embedding_and_rag.ipynb  openai.ipynb  token.py
notes/: llm_application.md  llm_training.md  vllm 讲解.md  默认话题.md
