[project]
name = "ai-is-all-you-need"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.1",
    "openai>=1.70.0",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.51.1",
]
